# multi-language-bazel-monorepo

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  gazelle  gazelle_python.yaml  package.json  pnpm-lock.yaml  pyproject.toml
projects/go_hello_world/: BUILD.bazel
projects/go_web/: BUILD.bazel  main.go
projects/node_calculator/: BUILD.bazel
projects/node_web/: BUILD.bazel
projects/python_calculator/: BUILD.bazel
projects/python_calculator_aspect_rules_py/: BUILD.bazel
projects/python_calculator_original/: BUILD.bazel
projects/python_web/: BUILD.bazel
projects/python_web_original/: BUILD.bazel
projects/ts_app/: BUILD.bazel  index.ts
tools/: pnpm  update_pnpm_lock.sh
