load("@rules_python//python:py_library.bzl", "py_library")
load("@rules_python//python:py_test.bzl", "py_test")

# gazelle:python_library_naming_convention calculator

py_library(
    name = "calculator",
    srcs = [
        "__init__.py",
        "calculator.py",
    ],
    # https://github.com/bazelbuild/rules_python/issues/1221#issuecomment-2562062268
    imports = ["."],
    visibility = ["//projects/python_web:__pkg__"],
)

py_test(
    name = "calculator_test",
    srcs = ["calculator_test.py"],
    deps = [":calculator"],
)


load("@rules_license//rules_gathering:generate_sbom.bzl", "generate_sbom")

# There are not a lot of targets in this rule set to build a SBOM from
# so we will (in a very self-referential way) generate one for the tool
# which generates the SBOMs
# See the output in bazel-bin/examples/sboms/write_sbom.txt
generate_sbom(
    name = "write_sbom",
    out = "write_sbom.txt",
    deps = ["//tools:write_sbom"],
)