load("@rules_python//python:py_library.bzl", "py_library")
load("@rules_python//python:py_test.bzl", "py_test")

# gazelle:python_library_naming_convention calculator
py_library(
    name = "calculator",
    srcs = ["calculator.py"],
    # https://github.com/bazelbuild/rules_python/issues/1221#issuecomment-2562062268
    imports = ["."],
    visibility = ["//projects/python_web:__pkg__"],
)

py_test(
    name = "calculator_test",
    srcs = ["calculator_test.py"],
    deps = [":calculator"],
)
