# gazelle:python_validate_import_statements false
load("@aspect_rules_py//py:defs.bzl", "py_library", "py_test")
load("@rules_uv//uv:venv.bzl", "create_venv")

# gazelle:python_library_naming_convention calculator
py_library(
    name = "calculator",
    srcs = [
        "calculator.py",
    ],
    visibility = ["//projects/python_web:__pkg__"],
)

py_test(
    name = "calculator_test",
    srcs = [
        "calculator_test.py",
    ],
    imports = ["."],
    deps = [
        ":calculator",
    ],
)

create_venv(
    name = "create_venv",
    requirements_txt = "//third_party:requirements.txt",
)