load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config", "ts_project")

js_binary(
    name = "bin",
    data = [":ts_app"],
    entry_point = ":index.js",
)

ts_config(
    name = "config",
    src = "tsconfig.json",
    deps = [],
)

ts_project(
    name = "ts_app",
    srcs = [
        "calculator.ts",
        "index.ts",
    ],
    tsconfig = "config",
)
